Fixes the distortion on images in the cards.

--- a/TokuCinema/src/styles/components/mediacard/mobile.scss
+++ b/TokuCinema/src/styles/components/mediacard/mobile.scss
@@ -8,6 +8,8 @@
   text-decoration: none;
   margin-bottom: 10px;
   margin-top: 10px;
+  background-repeat:no-repeat;
+  background-size:160px auto;
 }
 
 .media-card:hover {
@@ -16,7 +18,7 @@
 }
 
 .media-card-content {
-  margin-left: 10px;
+  margin-left: 170px;
   margin-right: 10px;
   display: flex;
   align-items: center;
